--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "express": "2.5.2",
     "jade": "0.20.0",
     "mongoose": "2.4.8",
-    "socket.io": "0.8.7"
+    "socket.io": "0.8.7",
+    "jquery": "~2.1.1",
+    "jsdom": "~1.0.0-pre.5"
   },
   "devDependencies": {
     "vows": "0.5.x",
-	"mocha": "*",
-	"should": "*"
+    "mocha": "*",
+    "should": "*"
   },
   "engine": "node >= 0.10.31"
 }
